--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CVAshvN5.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BDjAm_dM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D8CmstoM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ZEWRMKFG.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6NmoUd-o.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C9E3wWKU.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1l6dhg8 = {
+					__sveltekit_1i66b2y = {
 						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/sveltekit-github-pages"
+						assets: "/excel-is-evil"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CVAshvN5.js"),
-						import("./_app/immutable/entry/app.6NmoUd-o.js")
+						import("./_app/immutable/entry/start.D8CmstoM.js"),
+						import("./_app/immutable/entry/app.C9E3wWKU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
