--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D8CmstoM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ZEWRMKFG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.AVPvf3Xa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bd6zBVGY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C9E3wWKU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B-96u30W.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1i66b2y = {
+					__sveltekit_p0ml0f = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D8CmstoM.js"),
-						import("./_app/immutable/entry/app.C9E3wWKU.js")
+						import("./_app/immutable/entry/start.AVPvf3Xa.js"),
+						import("./_app/immutable/entry/app.B-96u30W.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
