--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en" class="dark scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
 	<head>
 		<meta charset="utf-8" />
-		<base href=".">
+		<base href="./excel-is-evil">
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.AVPvf3Xa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bd6zBVGY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DV7c31r_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CF5cedk6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B-96u30W.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.lSLzhtg9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_p0ml0f = {
+					__sveltekit_ne2ek4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.AVPvf3Xa.js"),
-						import("./_app/immutable/entry/app.B-96u30W.js")
+						import("./_app/immutable/entry/start.DV7c31r_.js"),
+						import("./_app/immutable/entry/app.lSLzhtg9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
