--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DV7c31r_.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CF5cedk6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DxASysbn.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BVKLVTOe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.lSLzhtg9.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.26dYiS09.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ne2ek4 = {
+					__sveltekit_qbasuo = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DV7c31r_.js"),
-						import("./_app/immutable/entry/app.lSLzhtg9.js")
+						import("./_app/immutable/entry/start.DxASysbn.js"),
+						import("./_app/immutable/entry/app.26dYiS09.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
