--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en" class="dark scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
 	<head>
 		<meta charset="utf-8" />
-		<base href="./excel-is-evil">
-		<link rel="icon" href="./favicon.png" />
+		<base href=".">
+		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DxASysbn.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BVKLVTOe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.6QWqSk0h.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CuYG4Y02.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.26dYiS09.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BJNAFyuw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_qbasuo = {
+					__sveltekit_1nvfw67 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DxASysbn.js"),
-						import("./_app/immutable/entry/app.26dYiS09.js")
+						import("./_app/immutable/entry/start.6QWqSk0h.js"),
+						import("./_app/immutable/entry/app.BJNAFyuw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
