--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6QWqSk0h.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CuYG4Y02.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CTPOM00H.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vpfTf2IP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BJNAFyuw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ByzeOLeN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1nvfw67 = {
+					__sveltekit_mgvqac = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6QWqSk0h.js"),
-						import("./_app/immutable/entry/app.BJNAFyuw.js")
+						import("./_app/immutable/entry/start.CTPOM00H.js"),
+						import("./_app/immutable/entry/app.ByzeOLeN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
