--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
+<html lang="en" class="dark bg-neutral-900 scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
 	<head>
 		<meta charset="utf-8" />
 		<base href=".">
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
