--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!doctype html>
-<html lang="en" class="dark scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
+<html lang="en" class="dark bg-neutral-900 scrollbar-thin scrollbar-thumb-neutral-700 scrollbar-track-transparent">
 	<head>
 		<meta charset="utf-8" />
 		<base href=".">
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CTPOM00H.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vpfTf2IP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CUbykhMj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Bc07Z5kc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ByzeOLeN.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CK01IJbj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CuOk0COZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DBZZSfBt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DdEmxxy6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CvJFF767.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.SoLrsVi2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cy2REB1N.js">
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_mgvqac = {
+					__sveltekit_1xhj0ja = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CTPOM00H.js"),
-						import("./_app/immutable/entry/app.ByzeOLeN.js")
+						import("./_app/immutable/entry/start.CuOk0COZ.js"),
+						import("./_app/immutable/entry/app.SoLrsVi2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
