--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CuOk0COZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DBZZSfBt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B4owMgwu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Im3kcDj2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DdEmxxy6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.CvJFF767.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.SoLrsVi2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.zF-4rYU2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cy2REB1N.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1xhj0ja = {
+					__sveltekit_1o2j94g = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +25,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CuOk0COZ.js"),
-						import("./_app/immutable/entry/app.SoLrsVi2.js")
+						import("./_app/immutable/entry/start.B4owMgwu.js"),
+						import("./_app/immutable/entry/app.zF-4rYU2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
