--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 	<head>
 		<meta charset="utf-8" />
 		<base href=".">
+		<title>Production Planner 2000</title>
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DcZqSdmr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Cdu-ne7Q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.DdEmxxy6.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CvJFF767.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BeJqiQXU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.Cy2REB1N.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BDEZI2pg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.IQX1uVyG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BMLqq8F_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.DeBl1m3g.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Z7lf6kBw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dd398DB5.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ou43ww = {
+					__sveltekit_1kcqj03 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -25,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DcZqSdmr.js"),
-						import("./_app/immutable/entry/app.BeJqiQXU.js")
+						import("./_app/immutable/entry/start.BDEZI2pg.js"),
+						import("./_app/immutable/entry/app.Z7lf6kBw.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
