--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BDEZI2pg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.IQX1uVyG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BhpLlTAu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.8n8EyqrK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BMLqq8F_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DeBl1m3g.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Z7lf6kBw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Qy7WvSp7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dd398DB5.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1kcqj03 = {
+					__sveltekit_1eqv0ra = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BDEZI2pg.js"),
-						import("./_app/immutable/entry/app.Z7lf6kBw.js")
+						import("./_app/immutable/entry/start.BhpLlTAu.js"),
+						import("./_app/immutable/entry/app.Qy7WvSp7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
