--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 		<link rel="icon" href="././favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DUk04oed.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.j3dBIgaw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Ck3Xz3nW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DrCziI3h.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BMLqq8F_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.DeBl1m3g.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.rJQ-bnUt.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.D7cWeBJ8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.Dd398DB5.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_yibic8 = {
+					__sveltekit_sb2ov0 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/excel-is-evil"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DUk04oed.js"),
-						import("./_app/immutable/entry/app.rJQ-bnUt.js")
+						import("./_app/immutable/entry/start.Ck3Xz3nW.js"),
+						import("./_app/immutable/entry/app.D7cWeBJ8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
